fix: update volume paths in docker-compose files and enhance browser driver options

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -16,7 +16,7 @@ services:
       - HEADLESS_MODE=false # Set to false to enable browser GUI
     # Mount the project directory to the container for live code updates
     volumes:
-      - ./database:/app/database
+      - ./db:/app/db
     # Ensure the 'selenium' service starts before the 'app' service
     depends_on:
       - selenium
@@ -27,9 +27,8 @@ services:
     image: selenium/standalone-chrome:latest
     container_name: selenium_chrome
     # Set the shared memory size to prevent browser crashes
-    shm_size: '2g'
+    shm_size: '1g'
     # Map ports from the container to the host machine
     ports:
-      - "4444:4444"  # Selenium WebDriver & Grid UI
       - "7900:7900"  # noVNC for web browser viewing
     restart: unless-stopped
