fix: update database volume path in docker-compose and adjust shared memory size for Selenium

--- a/.dockerignore
+++ b/.dockerignore
@@ -6,6 +6,13 @@
 Dockerfile
 docker-compose.yml
 
+# Database and Session Files
+database/*.db
+database/data/*.db
+database/cookies/*.pkl
+*.sqlite3
+*.db
+
 # Python virtual environment and cache
 .venv/
 venv/
