fix: update docker-compose configurations for Selenium service and adjust browser window size in driver

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -16,7 +16,7 @@ services:
       - HEADLESS_MODE=false # Set to false to enable browser GUI
     # Mount the project directory to the container for live code updates
     volumes:
-      - ./db:/app/db
+      - ./db:/app/db/data
     # Ensure the 'selenium' service starts before the 'app' service
     depends_on:
       - selenium
@@ -27,7 +27,15 @@ services:
     image: selenium/standalone-chrome:latest
     container_name: selenium_chrome
     # Set the shared memory size to prevent browser crashes
-    shm_size: '1g'
+    shm_size: "512m"
+    deploy:
+      resources:
+        limits:
+          cpus: '0.8'
+          memory: 768m
+    environment:
+      - SE_NODE_MAX_SESSIONS=1
+      - SE_NODE_OVERRIDE_MAX_SESSIONS=true
     # Map ports from the container to the host machine
     ports:
       - "7900:7900"  # noVNC for web browser viewing
